2011-12-13
* stop unpacking a file when the whole file has been blacklisted
* remove duplicate code in bruteforce.py

2011-12-12
* add another squashfs+LZMA variant (for Atheros devices) to bat-extratools
* add unpacking for squashfs+LZMA variant for Atheros devices to squashfs
unpacking
* rework code for unpacking files that contain multiple zip files, almost done
* add work around for certain files that contain multiple zip files. This
works for now, but it might be that we will need additional fixes in the
future.
* fix ranking bug that was triggered when there was a blacklist active
* fix unpacking code for unsquashfs (openwrt, lzma). When unqsuashfs tried to
unpack and tried to create inodes the scan thought unpacking had failed while
it was in fact successful.

2011-12-11
* if unyaffs seems successful, but actually does not unpack any data, it is
unsuccessful, so treat it as such.
* if zipinfo is unsuccessful we should bail out

2011-12-10
* add unpacking for 7z files, only when 7zip header can be found at offset 0,
until figured out what's safe (7z can unpack a lot more)

2011-12-08
* rework unpacking for GIF
* don't always create a temporary directory for 'byteswap', only when
necessary
* rewrite cramfs unpacking to new style
* don't try to unpack encrypted ZIP files

2011-12-07
* add unpacking for executables packed with UPX
* rewrite tar unpacking to standard format
* add extraction of PDF meta information using pdfinfo

2011-12-06
* enable yaffs2 unpacking

2011-12-05
* remove unused database

2011-12-01
* don't follow symlinks for chmod
* unsquashfs from openwrt with lzma cannot unpack to an existing directory, so
use an extra directory to work around that limitation
* add alternative LZMA identifier that is sometimes used in OpenWrt, rework
LZMA unpacking to work with multiple identifiers

2011-11-25
* add jdeserialize to bat-extratools
* add unpacking for Java serialized files using jdeserialize

2011-11-01
* treat Groovy files as Java